added groups and memberships

--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -42,12 +42,12 @@
   <tbody>
     <% @assignments.each do |assignment| %>
       <tr>
-        <td style="font-family: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;"><%= assignment.title %></td>
-        <td style="font-family: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;"><%= assignment.draft_due.strftime("%-b %-d at %I:%M%p") %></td>
-        <td style="font-family: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;"><%= assignment.final_due.strftime("%-b %-d at %I:%M%p") %></td>
+        <td><%= assignment.title %></td>
+        <td><%= assignment.draft_due.strftime("%-b %-d at %I:%M%p") %></td>
+        <td><%= assignment.final_due.strftime("%-b %-d at %I:%M%p") %></td>
         <%if !current_user.admin?%>
         <% if assignment.final_due < Time.zone.now %>
-        <td style="font-family: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;">Due date has passed</td>
+        <td>Due date has passed</td>
           <%elsif Post.where(user_id: current_user.id, assignment_id: assignment.id).exists?%>
             <%@post = Post.where(user_id: current_user.id, assignment_id: assignment.id).first%>
             <td><%=link_to "Edit/Continue Assignment", {:controller => 'posts', :action => 'edit', :id => @post.id, :assignment_id => assignment.id}%></td>
